@@ -8,6 +8,7 @@ import tryton.common as common
 from tryton.gui.window.nomodal import NoModal
 from tryton.common import TRYTON_ICON
 from tryton.common import RPCExecute, RPCException
+from tryton.common.widget_style import widget_class
 
 _ = gettext.gettext
 
@@ -98,15 +99,20 @@ class Widget(object):
             self.invisible_set(self.attrs.get('invisible', False))
             self._required_set(False)
             return
-        readonly = self.attrs.get('readonly',
-            field.get_state_attrs(record).get('readonly', False))
+        states = field.get_state_attrs(record)
+        readonly = self.attrs.get('readonly', states.get('readonly', False))
         if self.view.screen.readonly:
             readonly = True
         self._readonly_set(readonly)
-        self.invisible_set(self.attrs.get('invisible',
-            field.get_state_attrs(record).get('invisible', False)))
-        self._required_set(
-            field.get_state_attrs(record).get('required', False))
+        widget_class(self.widget, 'readonly', readonly)
+        self._required_set(not readonly and states.get('required', False))
+        widget_class(
+            self.widget, 'required',
+            not readonly and states.get('required', False))
+        invalid = states.get('invalid', False)
+        widget_class(self.widget, 'invalid', not readonly and invalid)
+        self.invisible_set(self.attrs.get(
+                'invisible', states.get('invisible', False)))
 
     def set_value(self, record, field):
         pass
